# multianalyzer

./: meson.build  pyproject.toml  version.py
multianalyzer/: file_io.py  meson.build  opencl.py
multianalyzer/app/: rebin.py
src/multianalyzer/: __init__.py  _multianalyzer.pyx  file_io.py  opencl.py
src/multianalyzer/app/: rebin.py
